watchを追加してcurrentPageを更新、ユーザー登録画面、ログイン画面、マイページのFLOCSSとレスポンシブデザイン実装

--- a/resources/sass/Layout/_main.scss
+++ b/resources/sass/Layout/_main.scss
@@ -18,4 +18,14 @@
             padding: 24px;
         }
     }
+
+    &__common {
+        background-color: #efffef;
+        padding: 120px 180px;
+
+        @include mq(sm){
+            padding: 24px;
+        }
+    }
+
 }
