--- a/public/css/app.css
+++ b/public/css/app.css
@@ -289,6 +289,12 @@ body {
   line-height: 60px;
 }
 
+@media screen and (max-width: 414px) {
+  .l-header__title {
+    font-size: 40px;
+  }
+}
+
 .l-main {
   width: 100%;
 }
@@ -311,6 +317,17 @@ body {
 
 @media screen and (max-width: 414px) {
   .l-main__convenience {
+    padding: 24px;
+  }
+}
+
+.l-main__common {
+  background-color: #efffef;
+  padding: 120px 180px;
+}
+
+@media screen and (max-width: 414px) {
+  .l-main__common {
     padding: 24px;
   }
 }
@@ -577,7 +594,7 @@ body {
 }
 
 .c-form {
-  padding: 40px 248px;
+  padding: 40px 250px;
   background: #fefefe;
 }
 
@@ -595,7 +612,7 @@ body {
 
 .c-input {
   background: #f6f5f4;
-  width: 360px;
+  width: 483px;
   border: 1px solid #000;
   margin: 16px 8px;
   padding: 8px;
@@ -641,6 +658,8 @@ body {
 }
 
 .c-label {
+  display: block;
+  font-weight: bold;
   font-size: 16px;
   color: #434343;
 }
@@ -825,8 +844,9 @@ body {
 }
 
 .p-product__list {
-  width: 746px;
+  width: 750px;
   display: flex;
+  flex-wrap: wrap;
   text-align: center;
 }
 
@@ -1023,6 +1043,10 @@ body {
 
 .u-pd__s {
   padding: 8px;
+}
+
+.u-pd__l {
+  padding: 24px;
 }
 
 .u-pd__xl {
