--- a/resources/sass/Layout/_header.scss
+++ b/resources/sass/Layout/_header.scss
@@ -39,5 +39,8 @@
         text-decoration: none;
         color: #434343;
         line-height: 60px;
+        @include mq(sm){
+            font-size: 40px;
+        }
     }
 }
