async/awaitを使ってログイン保持、ユーザー登録画面、ログイン画面、マイページ、商品一覧画面、プロフィール編集画面、退会画面のFLOCSSとレスポンシブデザイン実装

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -152,6 +152,10 @@ body {
   scroll-behavior: smooth;
 }
 
+.l-container {
+  width: 100%;
+}
+
 #l-footer {
   width: 100%;
   height: 30px;
@@ -297,6 +301,19 @@ body {
 
 .l-main {
   width: 100%;
+}
+
+.l-main__wrapper {
+  padding: 40px;
+  border: 0.5px solid #434343;
+  min-width: 819px;
+}
+
+@media screen and (max-width: 414px) {
+  .l-main__wrapper {
+    padding: 8px;
+    min-width: 95%;
+  }
 }
 
 .l-main__user {
@@ -446,6 +463,12 @@ body {
   transition: transform 0.3s;
 }
 
+@media screen and (max-width: 414px) {
+  .l-nav__menu--link::after {
+    display: none;
+  }
+}
+
 .l-nav__menu--link:hover::after {
   transform: scale(1, 1);
 }
@@ -479,7 +502,7 @@ body {
   .l-nav__menu--link {
     -webkit-font-smoothing: initial;
     display: block;
-    padding: 48px;
+    padding: 16px 0;
     text-align: center;
     color: #fff;
   }
@@ -495,18 +518,18 @@ body {
   background: #fefefe;
 }
 
+@media screen and (max-width: 414px) {
+  .c-button {
+    font-size: 8px;
+  }
+}
+
 .c-button__submit {
   padding: 8px;
   font-size: 16px;
   transition: 0.3s;
-  width: 504px;
+  width: 100%;
   font-weight: bold;
-}
-
-@media screen and (max-width: 414px) {
-  .c-button__submit {
-    width: 286px;
-  }
 }
 
 .c-button__user {
@@ -525,6 +548,14 @@ body {
   background: #ff1493;
 }
 
+.c-button__common {
+  border: 2px solid #32cd32;
+}
+
+.c-button__common:hover {
+  background: #32cd32;
+}
+
 .c-button:hover {
   color: #fefefe;
   font-weight: bold;
@@ -534,7 +565,7 @@ body {
 .c-button__detail {
   display: block;
   color: #434343;
-  font-size: 12px;
+  font-size: 16px;
   padding: 8px;
   margin: 8px;
 }
@@ -548,33 +579,40 @@ body {
   max-width: 200px;
   height: 100%;
   border: 1px solid #434343;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 414px) {
+  .c-card {
+    max-width: 100%;
+    font-size: 12px;
+  }
 }
 
 .c-card__picture {
-  width: 85%;
+  width: 100%;
+  height: 150px;
+  min-width: 200px;
+}
+
+@media screen and (max-width: 414px) {
+  .c-card__picture {
+    height: 100px;
+    min-width: 100%;
+  }
 }
 
 .c-card__name {
-  text-align: center;
-  font-size: 12px;
   font-weight: bold;
 }
 
-.c-card__price {
-  font-size: 12px;
-  display: flex;
-  justify-content: center;
-}
-
+.c-card__price,
 .c-card__date {
-  font-size: 12px;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .c-checkbox__container {
   display: flex;
-  margin: 16px 0;
   align-items: center;
   justify-content: center;
 }
@@ -594,27 +632,47 @@ body {
 }
 
 .c-form {
-  padding: 40px 250px;
+  padding: 40px 240px;
   background: #fefefe;
 }
 
 @media screen and (max-width: 414px) {
   .c-form {
-    padding: 16px;
+    padding: 24px;
   }
 }
 
+.c-form__search {
+  padding: 8px;
+}
+
 .c-icon {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
+  font-size: 24px;
+}
+
+@media screen and (max-width: 414px) {
+  .c-icon {
+    font-size: 12px;
+  }
+}
+
+.c-icon:hover {
+  cursor: pointer;
+}
+
+.c-icon__like {
+  color: #ff7fbf;
+}
+
+.c-icon__unlike {
+  color: #999;
 }
 
 .c-input {
   background: #f6f5f4;
-  width: 483px;
+  width: 100%;
   border: 1px solid #000;
-  margin: 16px 8px;
+  margin: 16px 0;
   padding: 8px;
   box-sizing: border-box;
   font-size: 16px;
@@ -622,14 +680,9 @@ body {
 
 @media screen and (max-width: 414px) {
   .c-input {
-    width: 200px;
     height: 24px;
-    border: 0.5px solid #434343;
-    margin: 8px;
-    padding: 8px;
-    overflow-y: auto;
+    margin: 8px 0;
     font-size: 12px;
-    line-height: 1.2;
   }
 
   .c-input::-moz-placeholder {
@@ -641,10 +694,20 @@ body {
   }
 }
 
+.c-input__password {
+  position: relative;
+}
+
+.c-input__password span {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 16px;
+  cursor: pointer;
+}
+
 .c-input__hidden {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -654,7 +717,15 @@ body {
 
 .c-input.is-invalid {
   background-color: #ffcccc;
-  /* エラーが発生した際の背景色 */
+}
+
+.c-input__search {
+  width: 75%;
+  margin: 8px 0px;
+}
+
+.c-input__radio {
+  margin: 8px 0;
 }
 
 .c-label {
@@ -666,7 +737,7 @@ body {
 
 @media screen and (max-width: 414px) {
   .c-label {
-    font-size: 8px;
+    font-size: 12px;
   }
 }
 
@@ -675,6 +746,12 @@ body {
   text-align: center;
   text-decoration: none;
   color: #434343;
+}
+
+@media screen and (max-width: 414px) {
+  .c-link {
+    font-size: 12px;
+  }
 }
 
 .c-link:hover {
@@ -687,6 +764,40 @@ body {
 
 .c-link__back {
   display: inline-block;
+}
+
+.c-pagination {
+  display: flex;
+  list-style-type: none;
+}
+
+.c-pagination li {
+  border: 1px solid #434343;
+  padding: 16px 24px;
+  text-align: center;
+}
+
+@media screen and (max-width: 414px) {
+  .c-pagination li {
+    padding: 8px;
+  }
+}
+
+.c-pagination .active {
+  background-color: #32cd32;
+  color: #fefefe;
+}
+
+.c-pagination.inactive {
+  color: #32cd32;
+}
+
+.c-pagination li + li {
+  border-left: none;
+}
+
+.disabled {
+  cursor: not-allowed;
 }
 
 .c-product__picture {
@@ -710,12 +821,13 @@ body {
   justify-content: center;
 }
 
-.c-text__agreement {
-  font-size: 16px;
+.c-selectbox {
+  width: 100%;
+  height: 32px;
 }
 
 @media screen and (max-width: 414px) {
-  .c-text__agreement {
+  .c-text {
     font-size: 12px;
   }
 }
@@ -727,9 +839,9 @@ body {
 
 .c-textarea {
   background: #f6f5f4;
-  width: 320px;
+  width: 100%;
   border: 1px solid #000;
-  margin: 16px 8px;
+  margin: 16px 0;
   padding: 8px;
   box-sizing: border-box;
   font-size: 16px;
@@ -737,9 +849,9 @@ body {
 
 .c-textarea__count {
   position: absolute;
-  font-size: 14px;
-  right: 6px;
-  bottom: -3px;
+  font-size: 12px;
+  right: 0px;
+  bottom: 0px;
 }
 
 .c-title {
@@ -758,6 +870,12 @@ body {
 .c-title__sub {
   font-size: 24px;
   text-align: left;
+}
+
+@media screen and (max-width: 414px) {
+  .c-title__sub {
+    font-size: 16px;
+  }
 }
 
 .c-title__terms {
@@ -784,51 +902,14 @@ body {
   }
 }
 
-.p-forgotpassword {
-  display: flex;
-  background-color: #fafafa;
+.p-card__header {
+  min-height: 48px;
 }
 
-.p-forgotpassword__form {
-  background: #fff;
-  margin: 184px auto;
-  padding: 40px;
-  text-align: left;
-  border: 1px solid #000;
-}
-
-.p-forgotpassword__button {
+.p-like {
   display: flex;
-  justify-content: center;
-}
-
-.p-icon {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  border: 1px solid #000;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  margin: 16px 8px;
-  padding: 8px;
-}
-
-.p-input__password {
-  position: relative;
-}
-
-.p-input__password input {
-  padding-right: 30px;
-}
-
-.p-input__password span {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 16px;
-  cursor: pointer;
+  justify-content: flex-end;
 }
 
 .p-mypage__sidebar {
@@ -837,17 +918,36 @@ body {
   width: 180px;
 }
 
+@media screen and (max-width: 414px) {
+  .p-mypage__sidebar {
+    width: 100%;
+  }
+}
+
 .p-mypage__purchased,
 .p-mypage__liked,
 .p-mypage__sale {
   background: #fefefe;
+  padding: 32px;
+}
+
+@media screen and (max-width: 414px) {
+  .p-mypage__purchased,
+  .p-mypage__liked,
+  .p-mypage__sale {
+    padding: 8px;
+  }
+}
+
+.p-pagination {
+  display: flex;
+  justify-content: center;
 }
 
 .p-product__list {
-  width: 750px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  text-align: center;
 }
 
 @media screen and (max-width: 414px) {
@@ -882,11 +982,14 @@ body {
 }
 
 .p-product__index {
-  background: #fff;
-  margin: 120px;
-  padding: 40px;
-  text-align: left;
-  border: 1px solid #000;
+  background: #fefefe;
+  padding: 24px 58px;
+}
+
+@media screen and (max-width: 414px) {
+  .p-product__index {
+    padding: 8px;
+  }
 }
 
 .p-product__form {
@@ -910,73 +1013,35 @@ body {
   background-color: #fafafa;
 }
 
-.p-profile__form {
-  background: #fff;
-  margin: 120px auto;
-  padding: 40px;
-  text-align: left;
+.p-profile__icon {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.p-profile__icon--container {
+  position: relative;
+  width: 200px;
+  height: 200px;
   border: 1px solid #000;
+  border-radius: 50%;
+  margin: auto;
+  padding: 8px;
 }
 
-.p-profile__button {
+.p-register__zip {
   display: flex;
-  justify-content: center;
-}
-
-.p-register {
-  padding: 40px;
-  border: 0.5px solid #434343;
-}
-
-@media screen and (max-width: 414px) {
-  .p-register {
-    padding: 24px;
-  }
+  justify-content: flex-end;
 }
 
 .p-register__terms {
-  height: 200px;
+  height: 160px;
   border: 0.5px solid #434343;
   margin: 8px;
   padding: 8px;
-  width: 466px;
   overflow-y: auto;
   font-size: 12px;
   line-height: 1.2;
-}
-
-@media screen and (max-width: 414px) {
-  .p-register__terms {
-    height: 200px;
-    border: 0.5px solid #434343;
-    margin: 8px;
-    padding: 8px;
-    overflow-y: auto;
-    font-size: 12px;
-    line-height: 1.2;
-    width: 250px;
-  }
-}
-
-.p-resetpassword {
-  display: flex;
-  align-items: center;
-  background-color: #fafafa;
-  height: 700px;
-}
-
-.p-resetpassword__form {
-  background: #fff;
-  width: 650px;
-  margin: 15px auto;
-  padding: 40px;
-  text-align: center;
-  border: 1px solid #000;
-}
-
-.p-resetpassword__button {
-  display: flex;
-  justify-content: center;
 }
 
 .p-text__form {
@@ -1033,6 +1098,10 @@ body {
   margin-top: 16px;
 }
 
+.u-mb__m {
+  margin-bottom: 16px;
+}
+
 .u-mt__xl {
   margin-top: 32px;
 }
@@ -1043,6 +1112,10 @@ body {
 
 .u-pd__s {
   padding: 8px;
+}
+
+.u-pd__m {
+  padding: 16px;
 }
 
 .u-pd__l {
