--- a/resources/sass/Layout/_main.scss
+++ b/resources/sass/Layout/_main.scss
@@ -1,6 +1,17 @@
 .l-main {
     width: 100%;
 
+    &__wrapper {
+        padding: 40px;
+        border: 0.5px solid #434343;
+        min-width: 819px;
+
+        @include mq(sm){
+            padding: 8px;
+            min-width: 95%;
+        }
+    }
+
     &__user {
         background-color: #efffff;
         padding: 120px 180px;
