--- a/resources/sass/Object/Component/_card.scss
+++ b/resources/sass/Object/Component/_card.scss
@@ -2,26 +2,29 @@
     max-width: 200px;
     height: 100%;
     border: 1px solid #434343;
+    font-size: 16px;
+
+    @include mq(sm){
+        max-width: 100%;
+        font-size: 12px;
+    }
 
     &__picture {
-        width: 85%;
+        width: 100%;
+        height: 150px;
+        min-width: 200px;
+        @include mq(sm){
+            height: 100px;
+            min-width: 100%;
+        }
     }
 
     &__name {
-        text-align: center;
-        font-size: 12px;
         font-weight: bold;
     }
 
-    &__price {
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-    }
-
+    &__price,
     &__date {
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
+        text-align: center;
     }
 }
