--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -1,40 +1,54 @@
 .c-input {
     background: #f6f5f4;
-    width: 483px;
+    width: 100%;
     border: 1px solid #000;
-    margin: 16px 8px;
+    margin: 16px 0;
     padding: 8px;
     box-sizing: border-box;
     font-size: 16px;
 
     @include mq(sm){
-        width: 200px;
         height: 24px;
-        border: 0.5px solid #434343;
-        margin: 8px;
-        padding: 8px;
-        overflow-y: auto;
+        margin: 8px 0;
         font-size: 12px;
-        line-height: 1.2;
 
         &::placeholder {
             font-size: 8px;
         }
     }
 
+    &__password {
+        position: relative;
+
+        span {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 16px;
+            cursor: pointer;
+        }
+    }
+
     &__hidden {
         position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
         opacity: 0;
         z-index: 1;
         cursor: pointer;
     }
-}
 
-.c-input.is-invalid {
-    background-color: #ffcccc; /* エラーが発生した際の背景色 */
-}
+    &.is-invalid {
+        background-color: #ffcccc;
+    }
 
+    &__search {
+        width: 75%;
+        margin: 8px 0px;
+    }
+
+    &__radio {
+        margin: 8px 0;
+    }
+
+}
