--- a/resources/sass/Object/Component/_textarea.scss
+++ b/resources/sass/Object/Component/_textarea.scss
@@ -1,16 +1,16 @@
 .c-textarea {
     background: #f6f5f4;
-    width: 320px;
+    width: 100%;
     border: 1px solid #000;
-    margin: 16px 8px;
+    margin: 16px 0;
     padding: 8px;
     box-sizing: border-box;
     font-size: 16px;
 
     &__count {
         position: absolute;
-        font-size: 14px;
-        right: 6px;
-        bottom: -3px;
+        font-size: 12px;
+        right: 0px;
+        bottom: 0px;
     }
 }
