--- a/resources/sass/Object/Component/_title.scss
+++ b/resources/sass/Object/Component/_title.scss
@@ -11,6 +11,9 @@
     &__sub {
         font-size: 24px;
         text-align: left;
+        @include mq(sm){
+            font-size: 16px;
+        }
     }
 
     &__terms {
