--- a/resources/sass/Object/Project/_mypage.scss
+++ b/resources/sass/Object/Project/_mypage.scss
@@ -3,11 +3,20 @@
         display: flex;
         flex-direction: column;
         width: 180px;
+
+        @include mq(sm){
+            width: 100%;
+        }
     }
 
     &__purchased,
     &__liked,
     &__sale {
         background: #fefefe;
+        padding: 32px;
+
+        @include mq(sm){
+            padding: 8px;
+        }
     }
 }
