--- a/resources/sass/Object/Project/_register.scss
+++ b/resources/sass/Object/Project/_register.scss
@@ -1,30 +1,16 @@
 .p-register {
-    padding: 40px;
-    border: 0.5px solid #434343;
-
-    @include mq(sm){
-        padding: 24px;
+    &__zip {
+        display: flex;
+        justify-content: flex-end;
     }
 
     &__terms {
-        height: 200px;
+        height: 160px;
         border: 0.5px solid #434343;
         margin: 8px;
         padding: 8px;
-        width: 466px;
         overflow-y: auto;
         font-size: 12px;
         line-height: 1.2;
-
-        @include mq(sm){
-            height: 200px;
-            border: 0.5px solid #434343;
-            margin: 8px;
-            padding: 8px;
-            overflow-y: auto;
-            font-size: 12px;
-            line-height: 1.2;
-            width: 250px;
-        }
     }
 }
