--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 // ==========================================================================
 // Layout
 // ==========================================================================
+@import 'Layout/container';
 @import 'Layout/footer';
 @import 'Layout/header';
 @import 'Layout/main';
@@ -39,7 +40,9 @@
 @import 'Object/component/input';
 @import 'Object/component/label';
 @import 'Object/component/link';
+@import 'Object/component/pagination';
 @import 'Object/component/product';
+@import 'Object/component/selectbox';
 @import 'Object/component/text';
 @import 'Object/component/textarea';
 @import 'Object/component/title';
@@ -49,14 +52,14 @@
 // Project
 // -----------------------------------------------------------------
 @import 'Object/project/article';
-@import 'Object/project/forgotpassword';
-@import 'Object/project/icon';
-@import 'Object/project/input';
+@import 'Object/project/card';
+@import 'Object/project/like';
 @import 'Object/project/mypage';
+@import 'Object/project/pagination';
 @import 'Object/project/product';
 @import 'Object/project/profile';
 @import 'Object/project/register';
-@import 'Object/project/resetpassword';
+@import 'Object/project/search';
 @import 'Object/project/text';
 @import 'Object/project/textarea';
 @import 'Object/project/withdraw';
