--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -37,12 +37,12 @@
     }
 
     &:hover {
-        color: #fefefe;
         font-weight: bold;
         cursor: pointer;
     }
 
-    &__detail {
+    &__detail,
+    &__edit {
         display: block;
         color: #434343;
         font-size: 16px;
@@ -50,9 +50,20 @@
         margin: 8px;
     }
 
+    &__share {
+        background: #000;
+        padding: 8px;
+    }
+
     &__purchase {
+        display: block;
+        color: #434343;
+        font-size: 16px;
+        padding: 8px;
+        margin: 8px;
+
         &:disabled{
-            background: $background-color_sub3;
+            background: #ccc;
             cursor: not-allowed;
         }
     }
