--- a/resources/sass/Object/Component/_product.scss
+++ b/resources/sass/Object/Component/_product.scss
@@ -1,6 +1,16 @@
 .c-product {
     &__picture {
-        width: 50%;
+        width: 100%;
+
+        &--detail {
+            display: block;
+            margin: auto;
+            max-width: 700px;
+
+            @include mq(sm){
+                width: 100%;
+            }
+        }
     }
 
     &__name {
