--- a/resources/sass/Layout/_main.scss
+++ b/resources/sass/Layout/_main.scss
@@ -4,7 +4,7 @@
     &__wrapper {
         padding: 40px;
         border: 0.5px solid #434343;
-        min-width: 819px;
+        min-width: 73%;
 
         @include mq(sm){
             padding: 8px;
