--- a/resources/sass/Object/Utility/_pd-x.scss
+++ b/resources/sass/Object/Utility/_pd-x.scss
@@ -1,3 +1,4 @@
+// padding
 .u-pd__s {
     padding: $space_s;
 }
@@ -14,18 +15,110 @@
     padding: $space_xl;
 }
 
+.u-pd__xxl {
+    padding: $space_xxl;
+}
+
+.u-pd__3l {
+    padding: $space_3l;
+}
+
+// padding-top
 .u-pdt__s {
     padding-top: $space_s;
 }
 
+.u-pdt__m {
+    padding-top: $space_m;
+}
+
+.u-pdt__l {
+    padding-top: $space_l;
+}
+
+.u-pdt__xl {
+    padding-top: $space_xl;
+}
+
+.u-pdt__xxl {
+    padding-top: $space_xxl;
+}
+
+.u-pdt__3l {
+    padding-top: $space_3l;
+}
+
+// pading-bottom
 .u-pdb__s {
     padding-bottom: $space_s;
 }
 
+.u-pdb__m {
+    padding-bottom: $space_m;
+}
+
+.u-pdb__l {
+    padding-bottom: $space_l;
+}
+
+.u-pdb__xl {
+    padding-bottom: $space_xl;
+}
+
+.u-pdb__xxl {
+    padding-bottom: $space_xxl;
+}
+
+.u-pdb__3l {
+    padding-bottom: $space_3l;
+}
+
+// padding-right
 .u-pdr__s {
     padding-right: $space_s;
 }
 
+.u-pdr__m {
+    padding-right: $space_m;
+}
+
+.u-pdr__l {
+    padding-right: $space_l;
+}
+
+.u-pdr__xl {
+    padding-right: $space_xl;
+}
+
+.u-pdr__xxl {
+    padding-right: $space_xxl;
+}
+
+.u-pdr__3l {
+    padding-right: $space_3l;
+}
+
+// padding-left
 .u-pdl__s {
     padding-left: $space_s;
+}
+
+.u-pdl__m {
+    padding-left: $space_m;
+}
+
+.u-pdl__l {
+    padding-left: $space_l;
+}
+
+.u-pdl__xl {
+    padding-left: $space_xl;
+}
+
+.u-pdl__xxl {
+    padding-left: $space_xxl;
+}
+
+.u-pdl__3l {
+    padding-left: $space_3l;
 }
