--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,10 +56,11 @@
 @import 'Object/project/like';
 @import 'Object/project/mypage';
 @import 'Object/project/pagination';
+@import 'Object/project/policy';
 @import 'Object/project/product';
 @import 'Object/project/profile';
 @import 'Object/project/register';
-@import 'Object/project/search';
+@import 'Object/project/terms';
 @import 'Object/project/text';
 @import 'Object/project/textarea';
 @import 'Object/project/withdraw';
