--- a/public/css/app.css
+++ b/public/css/app.css
@@ -142,7 +142,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
-  color: #333;
+  color: #434343;
   font-size: 16px;
   font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "\30D2\30E9\30AE\30CE\89D2\30B4\30B7\30C3\30AF   Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "\FF2D\FF33   \FF30\30B4\30B7\30C3\30AF", "MS PGothic", sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -167,8 +167,8 @@ body {
   position: fixed;
   right: 30px;
   bottom: 30px;
-  background: #fff;
-  border: solid 2px #000;
+  background: #f6f5f4;
+  border: solid 2px #434343;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -179,8 +179,8 @@ body {
 #l-footer__pagetop--arrow {
   height: 10px;
   width: 10px;
-  border-top: 3px solid #000;
-  border-right: 3px solid #000;
+  border-top: 3px solid #434343;
+  border-right: 3px solid #434343;
   transform: translateY(20%) rotate(-45deg);
 }
 
@@ -217,50 +217,38 @@ body {
 }
 
 #l-footer__inner {
+  line-height: 2.5;
   text-align: center;
-  background-color: #aaa;
-  color: #333;
-  padding: 40px;
+  background-color: #eee;
+  color: #434343;
 }
 
 #l-footer__text {
   font-size: 16px;
-  color: #fff;
+  color: #434343;
 }
 
 @media screen and (max-width: 414px) {
   #l-footer__text {
-    font-size: 12px;
+    font-size: 8px;
   }
-}
-
-@media screen and (max-width: 768px) {
-  #l-footer__text {
-    font-size: 12px;
-  }
-}
-
-#l-footer__link {
-  color: #fff;
 }
 
 .l-header {
-  box-sizing: border-box;
   width: 100%;
   height: 60px;
+  box-sizing: border-box;
   line-height: 50px;
-  color: #333;
-  padding-left: 32px;
-  padding-right: 32px;
+  color: #434343;
   transition: 0.3s;
-  background-color: #f5f5f5;
+  background-color: #fefefe;
 }
 
 .l-header.float-active {
   position: fixed;
   z-index: 2;
   transition: 0.3s;
-  background: #fff;
+  background: #434343;
   opacity: 0.9;
 }
 
@@ -284,10 +272,10 @@ body {
 }
 
 .l-header__title {
-  font-family: Arial;
+  font-family: "Arial", sans-serif;
   font-style: italic;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 48px;
   text-decoration: none;
   color: #434343;
   line-height: 60px;
@@ -306,14 +294,18 @@ body {
 .l-main__wrapper {
   padding: 40px;
   border: 0.5px solid #434343;
-  min-width: 73%;
+  min-width: 75%;
 }
 
 @media screen and (max-width: 414px) {
   .l-main__wrapper {
-    padding: 8px;
-    min-width: 95%;
+    padding: 16px;
   }
+}
+
+.l-main__wrapper--terms,
+.l-main__wrapper--policy {
+  border: none;
 }
 
 .l-main__user {
@@ -352,7 +344,6 @@ body {
 .l-nav__menu {
   display: flex;
   align-items: center;
-  font-family: "Robot", sans-serif;
 }
 
 @media screen and (max-width: 414px) {
@@ -400,7 +391,7 @@ body {
   left: 0;
   width: 100%;
   height: 4px;
-  background-color: #333;
+  background-color: #434343;
   border-radius: 4px;
 }
 
@@ -443,11 +434,11 @@ body {
 }
 
 .l-nav__menu--link {
-  font-size: 14px;
   margin: 0 32px;
-  color: #000;
   text-decoration: none;
   position: relative;
+  color: #434343;
+  font-size: 16px;
 }
 
 .l-nav__menu--link::after {
@@ -456,7 +447,7 @@ body {
   left: 0;
   width: 100%;
   height: 1px;
-  background: #000;
+  background: #434343;
   bottom: -1px;
   transform: scale(0, 1);
   transform-origin: left top;
@@ -485,14 +476,10 @@ body {
   border-radius: 50%;
 }
 
-.l-nav__menu--name {
-  font-size: 14px;
-}
-
 @media screen and (max-width: 414px) {
   .l-nav__menu {
     display: block;
-    font-size: 30px;
+    font-size: 40px;
   }
 
   .l-nav__menu--item {
@@ -504,29 +491,35 @@ body {
     display: block;
     padding: 16px 0;
     text-align: center;
-    color: #fff;
+    color: #fefefe;
   }
 }
 
 .l-sidebar {
-  background: #f5f5f5;
+  width: 25%;
+  background: #eee;
+}
+
+@media screen and (max-width: 414px) {
+  .l-sidebar {
+    width: 100%;
+  }
 }
 
 .c-button {
-  text-decoration: none;
   border-radius: 3px;
+  text-decoration: none;
+  font-size: 16px;
   background: #fefefe;
 }
 
 @media screen and (max-width: 414px) {
   .c-button {
-    font-size: 8px;
+    font-size: 12px;
   }
 }
 
 .c-button__submit {
-  padding: 8px;
-  font-size: 16px;
   transition: 0.3s;
   width: 100%;
   font-weight: bold;
@@ -562,38 +555,42 @@ body {
 }
 
 .c-button__detail,
-.c-button__edit {
+.c-button__edit,
+.c-button__cancel {
   display: block;
+  text-align: center;
   color: #434343;
-  font-size: 16px;
   padding: 8px;
   margin: 8px;
-  text-align: center;
+}
+
+@media screen and (max-width: 414px) {
+  .c-button__detail,
+  .c-button__edit,
+  .c-button__cancel {
+    font-size: 8px;
+  }
 }
 
 .c-button__share {
   background: #000;
-  padding: 8px;
+  border: #000;
 }
 
 .c-button__purchase {
   display: block;
   color: #434343;
-  font-size: 16px;
-  padding: 8px;
-  margin: 8px;
 }
 
 .c-button__purchase:disabled {
-  background: #ccc;
+  background: #fefefe;
   cursor: not-allowed;
 }
 
 .c-card {
-  max-width: 200px;
   height: 100%;
   border: 1px solid #434343;
-  font-size: 16px;
+  max-width: 200px;
 }
 
 @media screen and (max-width: 414px) {
@@ -635,15 +632,13 @@ body {
 
 .c-error {
   display: block;
-  color: red;
-  font-size: 16px;
-  margin: 8px 0;
+  color: #ff0000;
   font-weight: bold;
 }
 
 @media screen and (max-width: 414px) {
   .c-error {
-    font-size: 8px;
+    font-size: 12px;
   }
 }
 
@@ -656,10 +651,6 @@ body {
   .c-form {
     padding: 24px;
   }
-}
-
-.c-form__search {
-  padding: 8px;
 }
 
 .c-icon {
@@ -685,16 +676,14 @@ body {
 }
 
 .c-icon__share {
-  color: #fff;
+  color: #fefefe;
 }
 
 .c-input {
-  background: #f6f5f4;
   width: 100%;
-  border: 1px solid #000;
-  margin: 16px 0;
-  padding: 8px;
   box-sizing: border-box;
+  background: #f6f5f4;
+  border: 1px solid #434343;
   font-size: 16px;
 }
 
@@ -706,11 +695,11 @@ body {
   }
 
   .c-input::-moz-placeholder {
-    font-size: 8px;
+    font-size: 12px;
   }
 
   .c-input::placeholder {
-    font-size: 8px;
+    font-size: 12px;
   }
 }
 
@@ -721,8 +710,8 @@ body {
 .c-input__password span {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   right: 16px;
+  transform: translateY(-50%);
   cursor: pointer;
 }
 
@@ -741,18 +730,11 @@ body {
 
 .c-input__search {
   width: 75%;
-  margin: 8px 0px;
-}
-
-.c-input__radio {
-  margin: 8px 0;
 }
 
 .c-label {
   display: block;
   font-weight: bold;
-  font-size: 16px;
-  color: #434343;
 }
 
 @media screen and (max-width: 414px) {
@@ -766,12 +748,18 @@ body {
   top: 25%;
   left: 25%;
   opacity: 0.8;
-  padding: 16px;
-  background: #ff0000;
-  color: #fff;
   text-align: center;
   font-weight: bold;
   border-radius: 5px;
+  color: #fefefe;
+  background: #ff0000;
+}
+
+@media screen and (max-width: 414px) {
+  .c-label__purchase {
+    top: 20%;
+    left: 15%;
+  }
 }
 
 .c-link {
@@ -806,7 +794,7 @@ body {
 
 .c-pagination li {
   border: 1px solid #434343;
-  padding: 16px 24px;
+  padding: 24px;
   text-align: center;
 }
 
@@ -850,20 +838,15 @@ body {
 }
 
 .c-product__name {
-  font-size: 12px;
   font-weight: bold;
-}
-
-.c-product__price {
   font-size: 12px;
-  display: flex;
-  justify-content: center;
 }
 
+.c-product__price,
 .c-product__date {
-  font-size: 12px;
   display: flex;
   justify-content: center;
+  font-size: 12px;
 }
 
 .c-selectbox {
@@ -889,9 +872,9 @@ body {
 
 .c-text__attention {
   position: absolute;
-  font-size: 12px;
   right: 0px;
   bottom: -3px;
+  font-size: 12px;
 }
 
 @media screen and (max-width: 414px) {
@@ -901,27 +884,32 @@ body {
 }
 
 .c-textarea {
-  background: #f6f5f4;
   width: 100%;
-  border: 1px solid #000;
-  margin: 16px 0;
-  padding: 8px;
   box-sizing: border-box;
-  font-size: 16px;
+  border: 1px solid #434343;
+  background: #f6f5f4;
+}
+
+.c-textarea::-moz-placeholder {
+  font-size: 12px;
+}
+
+.c-textarea::placeholder {
+  font-size: 12px;
 }
 
 .c-textarea__count {
   position: absolute;
-  font-size: 12px;
   right: 0px;
   bottom: 0px;
+  font-size: 12px;
 }
 
 .c-title {
-  color: #434343;
-  font-size: 32px;
   font-weight: bold;
   text-align: center;
+  font-size: 32px;
+  color: #434343;
 }
 
 @media screen and (max-width: 414px) {
@@ -930,9 +918,19 @@ body {
   }
 }
 
-.c-title__sub {
+.c-title__header {
   font-size: 24px;
+}
+
+@media screen and (max-width: 414px) {
+  .c-title__header {
+    font-size: 16px;
+  }
+}
+
+.c-title__sub {
   text-align: left;
+  font-size: 24px;
 }
 
 @media screen and (max-width: 414px) {
@@ -941,8 +939,11 @@ body {
   }
 }
 
-.c-title__terms {
+.c-title__terms,
+.c-title__policy {
+  text-align: left;
   font-weight: bold;
+  font-size: 16px;
 }
 
 .p-article {
@@ -991,17 +992,17 @@ body {
   }
 }
 
-.p-mypage__purchased,
+.p-mypage__sale,
 .p-mypage__liked,
-.p-mypage__sale {
+.p-mypage__purchased {
   background: #fefefe;
   padding: 32px;
 }
 
 @media screen and (max-width: 414px) {
-  .p-mypage__purchased,
+  .p-mypage__sale,
   .p-mypage__liked,
-  .p-mypage__sale {
+  .p-mypage__purchased {
     padding: 8px;
   }
 }
@@ -1009,6 +1010,10 @@ body {
 .p-pagination {
   display: flex;
   justify-content: center;
+}
+
+.p-policy {
+  line-height: 1.5;
 }
 
 .p-product__list {
@@ -1036,14 +1041,14 @@ body {
 }
 
 .p-product__index {
-  background: #fefefe;
   padding: 24px 40px;
+  background: #fefefe;
 }
 
 .p-product__index--like,
 .p-product__index--purchased,
 .p-product__index--sale {
-  padding: 30px;
+  padding: 32px;
 }
 
 @media screen and (max-width: 414px) {
@@ -1052,29 +1057,21 @@ body {
   }
 }
 
-.p-product__form {
-  background: #fff;
-  margin: 120px auto;
-  padding: 40px;
-  text-align: left;
-  border: 1px solid #000;
-}
-
-.p-product__container {
-  width: 320px;
-}
-
 .p-product__picture--container {
   position: relative;
   height: 100%;
-  border: 1px solid #000;
+  border: 1px solid #434343;
   margin: auto;
-  padding: 8px;
+}
+
+.p-product__button {
+  display: flex;
+  flex-direction: column;
 }
 
 .p-profile {
   display: flex;
-  background-color: #fafafa;
+  background-color: #fefefe;
 }
 
 .p-profile__icon {
@@ -1087,10 +1084,9 @@ body {
   position: relative;
   width: 200px;
   height: 200px;
-  border: 1px solid #000;
-  border-radius: 50%;
   margin: auto;
-  padding: 8px;
+  border-radius: 50%;
+  border: 1px solid #434343;
 }
 
 .p-register__zip {
@@ -1100,12 +1096,14 @@ body {
 
 .p-register__terms {
   height: 160px;
-  border: 0.5px solid #434343;
-  margin: 8px;
-  padding: 8px;
   overflow-y: auto;
-  font-size: 12px;
   line-height: 1.2;
+  font-size: 12px;
+  border: 0.5px solid #434343;
+}
+
+.p-terms {
+  line-height: 1.5;
 }
 
 .p-text__form {
@@ -1118,15 +1116,7 @@ body {
 
 .p-withdraw {
   display: flex;
-  background-color: #fafafa;
-}
-
-.p-withdraw__form {
-  background: #fff;
-  margin: 120px auto;
-  padding: 40px;
-  text-align: left;
-  border: 1px solid #000;
+  background-color: #fefefe;
 }
 
 .p-withdraw__button {
@@ -1138,40 +1128,120 @@ body {
   margin: 8px;
 }
 
-.u-mr__s {
-  margin-right: 8px;
+.u-m__m {
+  margin: 16px;
 }
 
-.u-ml__s {
-  margin-left: 8px;
+.u-m__l {
+  margin: 24px;
+}
+
+.u-m__xl {
+  margin: 32px;
+}
+
+.u-m__xxl {
+  margin: 40px;
+}
+
+.u-m__3l {
+  margin: 48px;
 }
 
 .u-mt__s {
   margin-top: 8px;
 }
 
-.u-mb__s {
-  margin-bottom: 8px;
-}
-
-.u-m__m {
-  margin: 16px;
-}
-
 .u-mt__m {
   margin-top: 16px;
 }
 
-.u-mb__m {
-  margin-bottom: 16px;
+.u-mt__l {
+  margin-top: 24px;
 }
 
 .u-mt__xl {
   margin-top: 32px;
 }
 
+.u-mt__xxl {
+  margin-top: 40px;
+}
+
+.u-mt__3l {
+  margin-top: 48px;
+}
+
+.u-mb__s {
+  margin-bottom: 8px;
+}
+
+.u-mb__m {
+  margin-bottom: 16px;
+}
+
+.u-mb__l {
+  margin-bottom: 24px;
+}
+
 .u-mb__xl {
   margin-bottom: 32px;
+}
+
+.u-mb__xxl {
+  margin-bottom: 40px;
+}
+
+.u-mb__3l {
+  margin-bottom: 48px;
+}
+
+.u-mr__s {
+  margin-right: 8px;
+}
+
+.u-mr__m {
+  margin-right: 16px;
+}
+
+.u-mr__l {
+  margin-right: 24px;
+}
+
+.u-mr__xl {
+  margin-right: 32px;
+}
+
+.u-mr__xxl {
+  margin-right: 40px;
+}
+
+.u-mr__3l {
+  margin-right: 48px;
+}
+
+.u-ml__s {
+  margin-left: 8px;
+}
+
+.u-ml__m {
+  margin-left: 16px;
+}
+
+.u-ml__l {
+  margin-left: 24px;
+}
+
+.u-ml__xl {
+  margin-left: 32px;
+}
+
+ml__xxl.u- {
+  margin-left: 40px;
+}
+
+.u-ml__3l {
+  margin-left: 48px;
 }
 
 .u-pd__s {
@@ -1190,19 +1260,107 @@ body {
   padding: 32px;
 }
 
+.u-pd__xxl {
+  padding: 40px;
+}
+
+.u-pd__3l {
+  padding: 48px;
+}
+
 .u-pdt__s {
   padding-top: 8px;
+}
+
+.u-pdt__m {
+  padding-top: 16px;
+}
+
+.u-pdt__l {
+  padding-top: 24px;
+}
+
+.u-pdt__xl {
+  padding-top: 32px;
+}
+
+.u-pdt__xxl {
+  padding-top: 40px;
+}
+
+.u-pdt__3l {
+  padding-top: 48px;
 }
 
 .u-pdb__s {
   padding-bottom: 8px;
 }
 
+.u-pdb__m {
+  padding-bottom: 16px;
+}
+
+.u-pdb__l {
+  padding-bottom: 24px;
+}
+
+.u-pdb__xl {
+  padding-bottom: 32px;
+}
+
+.u-pdb__xxl {
+  padding-bottom: 40px;
+}
+
+.u-pdb__3l {
+  padding-bottom: 48px;
+}
+
 .u-pdr__s {
   padding-right: 8px;
 }
 
+.u-pdr__m {
+  padding-right: 16px;
+}
+
+.u-pdr__l {
+  padding-right: 24px;
+}
+
+.u-pdr__xl {
+  padding-right: 32px;
+}
+
+.u-pdr__xxl {
+  padding-right: 40px;
+}
+
+.u-pdr__3l {
+  padding-right: 48px;
+}
+
 .u-pdl__s {
   padding-left: 8px;
+}
+
+.u-pdl__m {
+  padding-left: 16px;
+}
+
+.u-pdl__l {
+  padding-left: 24px;
+}
+
+.u-pdl__xl {
+  padding-left: 32px;
+}
+
+.u-pdl__xxl {
+  padding-left: 40px;
+}
+
+.u-pdl__3l {
+  padding-left: 48px;
 }
 
