--- a/resources/sass/Layout/_footer.scss
+++ b/resources/sass/Layout/_footer.scss
@@ -1,45 +1,48 @@
-#l-footer{
+#l-footer {
     width: 100%;
     height: 30px;
 
-    &__pagetop{
+    &__pagetop {
         height: 50px;
         width: 50px;
         position: fixed;
         right: 30px;
         bottom: 30px;
-        background: #fff;
-        border: solid 2px #000;
+        background: $background-color_main;
+        border: solid 2px $boader-color_default;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         z-index: 2;
 
-        &--arrow{
+        &--arrow {
             height: 10px;
             width: 10px;
-            border-top: 3px solid #000;
-            border-right: 3px solid #000;
+            border-top: 3px solid $boader-color_default;
+            border-right: 3px solid $boader-color_default;
             transform: translateY(20%) rotate(-45deg);
         }
 
-        &.UpMove{
+        &.UpMove {
             animation: UpAnime 0.5s forwards;
         }
-        @keyframes UpAnime{
-            from{
+
+        @keyframes UpAnime {
+            from {
                 opacity: 0;
                 transform: translateY(100px);
             }
-            to{
+            to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
-        &.DownMove{
+
+        &.DownMove {
             animation: DownAnime 0.5s forwards;
         }
+
         @keyframes DownAnime{
             from {
                 opacity: 1;
@@ -51,24 +54,20 @@
             }
         }
     }
-    &__inner{
+
+    &__inner {
+        line-height: 2.5;
         text-align: center;
-        background-color: #aaa;
-        color: $font-color_link-1;
-        padding: $space_xxl;
+        background-color: $background-color_sub2;
+        color: $font-color_default;
     }
-    &__text{
+
+    &__text {
         font-size: $font-size_default;
-        color: $font-color_link-2;
+        color: $font-color_default;
         @include mq(sm){
-            font-size: $font-size_s;
-        }
-        @include mq(md){
             font-size: $font-size_s;
         }
     }
 
-    &__link{
-        color: $font-color_link-2;
-    }
 }
