--- a/resources/sass/Layout/_header.scss
+++ b/resources/sass/Layout/_header.scss
@@ -1,23 +1,21 @@
-.l-header{
-    box-sizing: border-box;
+.l-header {
     width: 100%;
     height: 60px;
+    box-sizing: border-box;
     line-height: 50px;
-    color: $font-color_link_1;
-    padding-left: $space_xl;
-    padding-right: $space_xl;
+    color: $font-color_default;
     transition: .3s;
-    background-color: #f5f5f5;
+    background-color: $background-color_sub;
 
-    &.float-active{
+    &.float-active {
         position: fixed;
         z-index: 2;
         transition: .3s;
-        background: $background-color_sub2;
+        background: $background-color_sub3;
         opacity: 0.9;
     }
 
-    @include mq(sm){
+    @include mq(sm) {
         height: 60px;
         padding-right: $space_l;
         padding-left: $space_l;
@@ -26,21 +24,24 @@
     &__inner {
         display: flex;
         justify-content: space-between;
-        @include mq(sm){
+
+        @include mq(sm) {
             margin-top: $space_s;
         }
+
     }
 
     &__title {
-        font-family: Arial;
+        font-family: $font-family_corp;
         font-style: italic;
         font-weight: bold;
-        font-size: 50px;
+        font-size: $font-size_3l;
         text-decoration: none;
-        color: #434343;
+        color: $font-color_default;
         line-height: 60px;
-        @include mq(sm){
-            font-size: 40px;
+
+        @include mq(sm) {
+            font-size: $font-size_xxl;
         }
     }
 }
