--- a/resources/sass/Layout/_main.scss
+++ b/resources/sass/Layout/_main.scss
@@ -3,12 +3,16 @@
 
     &__wrapper {
         padding: 40px;
-        border: 0.5px solid #434343;
-        min-width: 73%;
+        border: 0.5px solid $boader-color_default;
+        min-width: 75%;
 
         @include mq(sm){
-            padding: 8px;
-            min-width: 95%;
+            padding: $space_m;
+        }
+
+        &--terms,
+        &--policy {
+            border: none;
         }
     }
 
@@ -17,7 +21,7 @@
         padding: 120px 180px;
 
         @include mq(sm){
-            padding: 24px;
+            padding: $space_l;
         }
     }
 
@@ -26,7 +30,7 @@
         padding: 120px 180px;
 
         @include mq(sm){
-            padding: 24px;
+            padding: $space_l;
         }
     }
 
@@ -35,7 +39,7 @@
         padding: 120px 180px;
 
         @include mq(sm){
-            padding: 24px;
+            padding: $space_l;
         }
     }
 
