--- a/resources/sass/Layout/_nav.scss
+++ b/resources/sass/Layout/_nav.scss
@@ -1,10 +1,9 @@
 .l-nav {
-    &__menu{
+    &__menu {
         display: flex;
         align-items: center;
-        font-family: $font-family_corp;
 
-        @include mq(sm){
+        @include mq(sm) {
             display: block;
             position: fixed;
             top: 0;
@@ -16,16 +15,16 @@
             transition: .5s;
             z-index: 2;
 
-            &.is-active{
+            &.is-active {
                 transition: .5s;
                 transform: translateX(-100%);
-            }    
+            }
         }
-    
-        &--trigger{
+
+        &--trigger {
             display: none;
 
-            @include mq(sm){
+            @include mq(sm) {
                 display: inline-block;
                 margin-top: $space_m;
             }
@@ -37,7 +36,7 @@
             height: 32px;
             z-index: 3;
 
-            span{
+            span {
                 display: inline-block;
                 transition: all .4s;
                 box-sizing: border-box;
@@ -47,24 +46,26 @@
                 height: 4px;
                 background-color: $font-color_default;
                 border-radius: 4px;
-                &:nth-of-type(1){
+
+                &:nth-of-type(1) {
                     top: 0;
                 }
-                &:nth-of-type(2){
+                &:nth-of-type(2) {
                     top: 14px;
                 }
-                &:nth-of-type(3){
+                &:nth-of-type(3) {
                     bottom: 0;
                 }
             }
-            &.is-active span{
-                &:nth-of-type(1){
+
+            &.is-active span {
+                &:nth-of-type(1) {
                     transform: translateY(12px) rotate(-45deg);
                 }
-                &:nth-of-type(2){
+                &:nth-of-type(2) {
                     opacity: 0;
                 }
-                &:nth-of-type(3){
+                &:nth-of-type(3) {
                     transform: translateY(-15px) rotate(45deg);
                 }
             }
@@ -74,7 +75,7 @@
             display: flex;
             align-items: center;
 
-            @include mq(sm){
+            @include mq(sm) {
                 text-align: center;
                 display: flex;
                 flex-direction: column;
@@ -83,18 +84,19 @@
         }
 
         &--link {
-            font-size: $font-size_m;
             margin: 0 $space_xl;
-            color: $font-color-sub2;
             text-decoration: none;
             position: relative;
+            color: $font-color_default;
+            font-size: $font-size_default;
+
             &::after {
                 content: '';
                 position: absolute;
                 left: 0;
                 width: 100%;
                 height: 1px;
-                background: $font-color-sub2;
+                background: $background-color_sub3;
                 bottom: -1px;
                 transform: scale(0, 1);
                 transform-origin: left top;
@@ -121,22 +123,20 @@
             border-radius: 50%;
         }
 
-        &--name {
-            font-size: 14px;
-        }
-
-        @include mq(sm){
+        @include mq(sm) {
             display: block;
             font-size: $font-size_xxl;
-            &--item{
+
+            &--item {
                 margin-right: initial;
             }
-            &--link{
+
+            &--link {
                 -webkit-font-smoothing: initial;
                 display: block;
                 padding: 16px 0;
                 text-align: center;
-                color: $font-color-sub3;
+                color: $font-color_sub;
             }
         }
     }
