--- a/resources/sass/Object/Component/_card.scss
+++ b/resources/sass/Object/Component/_card.scss
@@ -1,12 +1,11 @@
 .c-card {
-    max-width: 200px;
     height: 100%;
-    border: 1px solid #434343;
-    font-size: 16px;
+    border: 1px solid $boader-color_default;
+    max-width: 200px;
 
-    @include mq(sm){
+    @include mq(sm) {
         max-width: 100%;
-        font-size: 12px;
+        font-size: $font-size_m;
     }
 
     &__picture {
@@ -14,7 +13,8 @@
         width: 100%;
         height: 150px;
         min-width: 200px;
-        @include mq(sm){
+
+        @include mq(sm) {
             height: 100px;
             min-width: 100%;
         }
