--- a/resources/sass/Object/Component/_error.scss
+++ b/resources/sass/Object/Component/_error.scss
@@ -1,11 +1,9 @@
 .c-error {
     display: block;
-    color: red;
-    font-size: 16px;
-    margin: 8px 0;
+    color: $font-color_msg;
     font-weight: bold;
 
     @include mq(sm){
-        font-size: 8px;
+        font-size: $font-size_m;
     }
 }
