--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -1,19 +1,17 @@
 .c-input {
-    background: #f6f5f4;
     width: 100%;
-    border: 1px solid #000;
-    margin: 16px 0;
-    padding: 8px;
     box-sizing: border-box;
-    font-size: 16px;
+    background: $background-color_main;
+    border: 1px solid $boader-color_default;
+    font-size: $font-size_default;
 
-    @include mq(sm){
+    @include mq(sm) {
         height: 32px;
-        margin: 8px 0;
-        font-size: 12px;
+        margin: $space_s 0;
+        font-size: $font-size_m;
 
         &::placeholder {
-            font-size: 8px;
+            font-size: $font-size_m;
         }
     }
 
@@ -23,8 +21,8 @@
         span {
             position: absolute;
             top: 50%;
-            transform: translateY(-50%);
             right: 16px;
+            transform: translateY(-50%);
             cursor: pointer;
         }
     }
@@ -39,16 +37,10 @@
     }
 
     &.is-invalid {
-        background-color: #ffcccc;
+        background-color: $background-color_valid;
     }
 
     &__search {
         width: 75%;
-        margin: 8px 0px;
     }
-
-    &__radio {
-        margin: 8px 0;
-    }
-
 }
