--- a/resources/sass/Object/Component/_product.scss
+++ b/resources/sass/Object/Component/_product.scss
@@ -7,26 +7,21 @@
             margin: auto;
             max-width: 700px;
 
-            @include mq(sm){
+            @include mq(sm) {
                 width: 100%;
             }
         }
     }
 
     &__name {
-        font-size: 12px;
         font-weight: bold;
+        font-size: $font-size_m;
     }
 
-    &__price {
-        font-size: 12px;
-        display: flex;
-        justify-content: center;
-    }
-
+    &__price,
     &__date {
-        font-size: 12px;
         display: flex;
         justify-content: center;
+        font-size: $font-size_m;
     }
 }
