--- a/resources/sass/Object/Component/_textarea.scss
+++ b/resources/sass/Object/Component/_textarea.scss
@@ -1,16 +1,17 @@
 .c-textarea {
-    background: #f6f5f4;
     width: 100%;
-    border: 1px solid #000;
-    margin: 16px 0;
-    padding: 8px;
     box-sizing: border-box;
-    font-size: 16px;
+    border: 1px solid $boader-color_default;
+    background: $background-color_main;
+
+    &::placeholder {
+        font-size: $font-size_m;
+    }
 
     &__count {
         position: absolute;
-        font-size: 12px;
         right: 0px;
         bottom: 0px;
+        font-size: $font-size_m;
     }
 }
