--- a/resources/sass/Object/Project/_mypage.scss
+++ b/resources/sass/Object/Project/_mypage.scss
@@ -1,21 +1,22 @@
 .p-mypage {
+
     &__sidebar {
         display: flex;
         flex-direction: column;
 
-        @include mq(sm){
+        @include mq(sm) {
             width: 100%;
         }
     }
 
-    &__purchased,
+    &__sale,
     &__liked,
-    &__sale {
-        background: #fefefe;
-        padding: 32px;
+    &__purchased {
+        background: $background-color_sub;
+        padding: $space_xl;
 
-        @include mq(sm){
-            padding: 8px;
+        @include mq(sm) {
+            padding: $space_s;
         }
     }
 }
