--- a/resources/sass/Object/Project/_profile.scss
+++ b/resources/sass/Object/Project/_profile.scss
@@ -1,6 +1,6 @@
 .p-profile {
     display: flex;
-    background-color: #fafafa;
+    background-color: $background-color_sub;
 
     &__icon {
         width: 200px;
@@ -11,10 +11,9 @@
             position: relative;
             width: 200px;
             height: 200px;
-            border: 1px solid #000;
-            border-radius: 50%;
             margin: auto;
-            padding: 8px;
+            border-radius: 50%;
+            border: 1px solid $boader-color_default;
         }
     }
 }
