--- a/resources/sass/Layout/_header.scss
+++ b/resources/sass/Layout/_header.scss
@@ -5,7 +5,7 @@
     line-height: 50px;
     color: $font-color_default;
     transition: .3s;
-    background-color: $background-color_sub;
+    background-color: $background-color_sub2;
 
     &.float-active {
         position: fixed;
