--- a/resources/sass/Layout/_main.scss
+++ b/resources/sass/Layout/_main.scss
@@ -2,7 +2,7 @@
     width: 100%;
 
     &__wrapper {
-        padding: 40px;
+        padding: $space_xl;
         border: 0.5px solid $boader-color_default;
         min-width: 75%;
 
