--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -4,6 +4,7 @@
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        justify-content: flex-start;
 
         @include mq(sm) {
             width: 100%;
